--- a/src/stylesheets/greeting.css
+++ b/src/stylesheets/greeting.css
@@ -1,11 +1,11 @@
 .greeting {
+  overflow: hidden;
+
   height: 100vh;
 
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   align-items: center;
-  gap: 3rem;
 }
 
 .greeting-taglines {
@@ -14,9 +14,16 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+
+  position: relative;
 }
 
 .self-taught {
+  position: absolute;
+  top: 2rem;
+  left: 3rem;
+  transform: rotate(-10deg);
+
   flex: 0 0 50%;
 
   color: transparent;
@@ -37,18 +44,21 @@
   background-clip: text;
   -webkit-background-clip: text;
 
-  font-size: 6rem;
   font-family: 'Permanent Marker', 'sans-serif';
   text-align: center;
 
   background-size: 400% 100%;
   background-position: 0 0;
-  animation: slide 3s linear 0.5s infinite;
 
-  transition: font-size 0.5s ease-in-out;
+  font-size: 7rem;
+
+  animation: zoom 0.5s ease-in, slide 5s linear 0.9s infinite;
 }
 
 .deep-thought {
+  position: absolute;
+  top: 85%;
+  left: 50%;
   flex: 0 0 50%;
   color: lime;
   font-family: 'Victor Mono', 'monospace';
@@ -57,12 +67,31 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+
+  height: 4rem;
+}
+
+.blinking-cursor {
+  align-self: flex-end;
+
+  background-color: lime;
+  height: 4rem;
+  width: 2rem;
+}
+
+.blinking-cursor-blinking {
+  height: 2px;
 }
 
 .greeting-namecard {
+  opacity: 0;
+
+  flex: 0 0 90%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .greeting-namecard h1 {
@@ -71,6 +100,10 @@
   text-shadow: 0px 0px 0px var(--color-fg-primary),
     0px 0px 10px var(--color-rainbow-orange),
     0px 0px 15px var(--color-rainbow-pink);
+}
+
+.greeting-namecard-visible {
+  opacity: 1;
 }
 
 .subtitles {
@@ -95,6 +128,7 @@
 }
 
 .subtitles h2.pronouns {
+  padding: 0.5rem;
   font-family: 'Permanent Marker', 'sans-serif';
   color: transparent;
   text-shadow: none;
@@ -120,12 +154,35 @@
   0% {
     background-position: 0 0;
   }
+  40% {
+    background-position: 115% 0;
+  }
   100% {
     background-position: 115% 0;
   }
 }
 
-@keyframes bobble {
+@keyframes zoom {
   0% {
+    font-size: 30rem;
+    transform: scale(20);
+    opacity: 0;
+  }
+  100% {
+    font-size: 6rem;
+    transform: scale(1);
+    opacity: 1;
   }
 }
+
+/* @keyframes tease { */
+/*   0% { */
+/*     transform: translate(0%, 0%); */
+/*   } */
+/*   80% { */
+/*     transform: translate(0%, -85%); */
+/*   } */
+/*   100% { */
+/*     transform: translate(0%, 0%); */
+/*   } */
+/* } */
