--- a/src/stylesheets/loading.css
+++ b/src/stylesheets/loading.css
@@ -4,4 +4,74 @@
   background-color: var(--color-bg-primary);
   color: var(--color-fg-primary);
   z-index: 2;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading-bar-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+
+  height: 7rem;
+  width: 5rem;
+}
+
+.loading-bar {
+  width: 0.75rem;
+  height: 0.75rem;
+
+  animation: bounce 2s ease-in-out infinite;
+  transform-origin: 50% 100%; /* TODO what is this for */
+}
+
+.loading-bar:nth-of-type(1) {
+  background-color: var(--color-rainbow-pink);
+}
+
+.loading-bar:nth-of-type(2) {
+  background-color: var(--color-rainbow-orange);
+  animation-delay: 100ms;
+}
+
+.loading-bar:nth-of-type(3) {
+  background-color: var(--color-rainbow-blue);
+  animation-delay: 200ms;
+}
+
+.loading-bar:nth-of-type(4) {
+  background-color: var(--color-rainbow-green);
+  animation-delay: 300ms;
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  40%,
+  60%,
+  80%,
+  100% {
+    transform: scaleY(1);
+    animation-timing-function: ease-out;
+  }
+  10% {
+    transform: scaleY(8);
+    animation-timing-function: ease-in;
+  }
+  30% {
+    transform: scaleY(4);
+    animation-timing-function: ease-in;
+  }
+  50% {
+    transform: scaleY(2);
+    animation-timing-function: ease-in;
+  }
+  70% {
+    transform: scaleY(1.5);
+    animation-timing-function: ease-in;
+  }
 }
