--- a/src/stylesheets/loading.css
+++ b/src/stylesheets/loading.css
@@ -2,8 +2,6 @@
   height: 100vh;
   width: 100vw;
   background-color: var(--color-bg-primary);
-  color: var(--color-fg-primary);
-  z-index: 2;
 
   display: flex;
   flex-direction: row;
@@ -27,6 +25,9 @@
 
   animation: bounce 2s ease-in-out infinite;
   transform-origin: 50% 100%; /* TODO what is this for */
+
+  opacity: 1;
+  transition: opacity 1s ease-in;
 }
 
 .loading-bar:nth-of-type(1) {
@@ -46,6 +47,10 @@
 .loading-bar:nth-of-type(4) {
   background-color: var(--color-rainbow-green);
   animation-delay: 300ms;
+}
+
+.loading-bar-container.loading-bar-container-fade .loading-bar {
+  opacity: 0;
 }
 
 @keyframes bounce {
