--- a/src/stylesheets/greeting.css
+++ b/src/stylesheets/greeting.css
@@ -57,6 +57,11 @@
   animation: zoom 0.5s ease-in, slide 5s linear 0.9s infinite;
 }
 
+:root.reduced-motion .self-taught {
+  background-size: 100% 100%;
+  background-position: 0 0;
+}
+
 .deep-thought {
   position: absolute;
   top: 85%;
