--- a/src/stylesheets/greeting.css
+++ b/src/stylesheets/greeting.css
@@ -6,14 +6,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.greeting-taglines {
-  flex: 0 0 10%;
-
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
 
   position: relative;
 }
@@ -63,8 +55,10 @@
 }
 
 .deep-thought {
+  z-index: 999;
+
   position: absolute;
-  top: 85%;
+  top: 4rem;
   left: 50%;
   flex: 0 0 50%;
   color: lime;
@@ -91,7 +85,7 @@
 }
 
 .greeting-namecard {
-  flex: 0 0 90%;
+  flex: 0 0 100%;
 
   display: flex;
   flex-direction: column;
@@ -151,6 +145,18 @@
   -webkit-background-clip: text;
 }
 
+.greeting-footer {
+  position: absolute;
+  bottom: 15%;
+
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 @keyframes slide {
   0% {
     background-position: 0 0;
@@ -175,15 +181,3 @@
     opacity: 1;
   }
 }
-
-/* @keyframes tease { */
-/*   0% { */
-/*     transform: translate(0%, 0%); */
-/*   } */
-/*   80% { */
-/*     transform: translate(0%, -85%); */
-/*   } */
-/*   100% { */
-/*     transform: translate(0%, 0%); */
-/*   } */
-/* } */
