--- a/src/stylesheets/greeting.css
+++ b/src/stylesheets/greeting.css
@@ -11,8 +11,6 @@
 }
 
 .self-taught {
-  border: 1px solid white;
-  padding: 0rem 2rem;
   z-index: 2;
 
   position: absolute;
@@ -21,8 +19,12 @@
   transform: rotate(-10deg);
 
   flex: 0 0 50%;
+}
 
+.self-taught h2 {
   color: transparent;
+  border: 1px solid white;
+  padding: 0rem 2rem;
   background: linear-gradient(
     135deg,
     var(--color-rainbow-pink) 30%,
@@ -44,14 +46,9 @@
   text-align: center;
 
   background-size: 400% 100%;
-  background-position: 0 0;
 
   font-size: 7rem;
-
-  /* animation: zoom 0.5s ease-in, slide 5s linear 0.9s infinite; */
-  animation: slide 5s linear 0.9s infinite;
 }
-
 :root.reduced-motion .self-taught {
   background-size: 100% 100%;
   background-position: 0 0;
@@ -158,16 +155,4 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-}
-
-@keyframes slide {
-  0% {
-    background-position: 0 0;
-  }
-  40% {
-    background-position: 115% 0;
-  }
-  100% {
-    background-position: 115% 0;
-  }
 }
