--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -57,7 +57,7 @@ h2 {
 .button {
   /* height: 2rem; */
   /* width: 5rem; */
-  border: 1px solid white;
+  border: 1px solid var(--color-fg-primary);
   border-radius: 5px;
   background: transparent;
 
@@ -73,10 +73,18 @@ h2 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+
+  box-shadow: 0px 0px 0px var(--color-fg-primary),
+    0px 0px 0px var(--color-rainbow-orange),
+    0px 0px 0px var(--color-rainbow-pink);
+  transition: box-shadow 0.2s linear;
 }
 
 .button:hover {
   cursor: pointer;
+  box-shadow: 0px 0px 0px var(--color-fg-primary),
+    0px 0px 10px var(--color-rainbow-orange),
+    0px 0px 15px var(--color-rainbow-pink);
 }
 
 .nav-button {
