--- a/src/stylesheets/greeting.css
+++ b/src/stylesheets/greeting.css
@@ -23,7 +23,7 @@
 
 .self-taught h2 {
   color: transparent;
-  border: 1px solid white;
+
   padding: 0rem 2rem;
   background: linear-gradient(
     135deg,
@@ -49,7 +49,7 @@
 
   font-size: 7rem;
 }
-:root.reduced-motion .self-taught {
+:root.reduced-motion .self-taught h2 {
   background-size: 100% 100%;
   background-position: 0 0;
 }
@@ -75,13 +75,23 @@
 .blinking-cursor {
   align-self: flex-end;
 
-  background-color: lime;
+  /* background-color: lime; */
+  background-color: var(--color-bg-primary);
   height: 4rem;
   width: 2rem;
+
+  position: relative;
 }
 
-.blinking-cursor-blinking {
+.blinking-cursor div {
+  background-color: lime;
   height: 2px;
+  width: 100%;
+
+  position: absolute;
+  bottom: 0;
+
+  transform-origin: 50% 100%;
 }
 
 .greeting-namecard {
@@ -146,6 +156,7 @@
 }
 
 .greeting-footer {
+  background: var(--color-bg-primary);
   position: absolute;
   bottom: 15%;
 
