--- a/src/stylesheets/greeting.css
+++ b/src/stylesheets/greeting.css
@@ -133,6 +133,10 @@
 }
 
 .subtitles h2.pronouns {
+  /* NOTE: border here is a hack to address issue in Safari
+  ... wherein little shards of the background appear at the bottom
+  ... of the element */
+  border: 1px solid var(--color-bg-primary);
   padding: 0.5rem;
   font-family: 'Permanent Marker', 'sans-serif';
   color: transparent;
