--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -39,6 +39,12 @@ body {
   background-color: var(--color-bg-primary);
 }
 
+a {
+  text-decoration: none;
+  color: var(--color-fg-primary);
+  font-family: 'Archivo Black', 'sans-serif';
+}
+
 h1,
 h2 {
   font-family: 'Archivo Black', 'sans-serif';
@@ -54,9 +60,15 @@ h2 {
   font-size: 3rem;
 }
 
+div,
+p {
+  color: var(--color-fg-primary);
+  font-size: 1rem;
+}
+
 .button {
   /* height: 2rem; */
-  /* width: 5rem; */
+  width: 15rem;
   border: 1px solid var(--color-fg-primary);
   border-radius: 5px;
   background: transparent;
@@ -65,7 +77,6 @@ h2 {
   font-size: 2rem;
   font-family: 'Archivo Black', 'sans-serif';
 
-  margin: 0 auto;
   text-align: center;
   padding: 1%;
 
