--- a/src/stylesheets/about.css
+++ b/src/stylesheets/about.css
@@ -1,10 +1,29 @@
+.about {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  padding-top: 3rem;
+  gap: 3rem;
+}
+
+.about h1 {
+  /* TODO abstract this */
+  font-size: 8rem;
+  color: transparent;
+  text-shadow: 0px 0px 0px var(--color-fg-primary),
+    0px 0px 10px var(--color-rainbow-orange),
+    0px 0px 15px var(--color-rainbow-pink);
+}
+
 .about-prompts-container {
   display: flex;
   flex-direction: row;
-  justify-content: stretch;
+  justify-content: center;
   flex-wrap: wrap;
   width: 100vw;
-  border: 1px solid white;
   gap: 1rem;
   padding: 1rem;
 }
